semantic.output
State 79 conflicts: 1 shift/reduce
State 176 conflicts: 13 reduce/reduce
State 179 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: func
    2     | dcl
    3     | func more_prog
    4     | dcl more_prog
    5     | /* empty */

    6 more_prog: func
    7          | dcl
    8          | func more_prog
    9          | dcl more_prog

   10 dcl: type var_decl
   11    | EXTERN type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams COLON
   12    | EXTERN type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON
   13    | type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON
   14    | type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams COLON
   15    | error COLON

   16 addID: ID

   17 addparams: /* empty */

   18 more_dcl: addID LEFTPAREN push parm_types RIGHTPAREN pop addparams
   19         | addID LEFTPAREN push parm_types RIGHTPAREN pop addparams ',' more_dcl

   20 var_decl: addID COLON
   21         | addID ',' var_decl
   22         | addID LEFTBRACK INTCON RIGHTBRACK COLON
   23         | addID LEFTBRACK INTCON RIGHTBRACK ',' var_decl

   24 parm_types: type
   25           | type addID
   26           | type addID LEFTBRACK RIGHTBRACK
   27           | type addID LEFTBRACK RIGHTBRACK ',' more_parm
   28           | type addID ',' more_parm

   29 more_parm: type addID
   30          | type addID ',' more_parm
   31          | type addID LEFTBRACK RIGHTBRACK
   32          | type addID LEFTBRACK RIGHTBRACK ',' more_parm

   33 func: type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL type var_decl more_interior RIGHTCURL pop addparams
   34     | type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL stmt more_interior RIGHTCURL pop addparams
   35     | type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL RIGHTCURL pop addparams
   36     | error RIGHTCURL

   37 more_interior: stmt more_interior
   38              | type var_decl more_interior
   39              | /* empty */

   40 type: CHAR
   41     | INT
   42     | VOID

   43 stmt: IF LEFTPAREN expr RIGHTPAREN stmt ELSE stmt
   44     | IF LEFTPAREN expr RIGHTPAREN stmt
   45     | WHILE LEFTPAREN expr RIGHTPAREN stmt
   46     | FOR LEFTPAREN assg COLON expr COLON assg RIGHTPAREN stmt
   47     | FOR LEFTPAREN COLON expr COLON assg RIGHTPAREN stmt
   48     | FOR LEFTPAREN COLON COLON assg RIGHTPAREN stmt
   49     | FOR LEFTPAREN assg COLON COLON assg RIGHTPAREN stmt
   50     | FOR LEFTPAREN assg COLON COLON RIGHTPAREN stmt
   51     | FOR LEFTPAREN COLON expr COLON RIGHTPAREN stmt
   52     | FOR LEFTPAREN COLON COLON RIGHTPAREN stmt
   53     | FOR LEFTPAREN assg COLON expr COLON RIGHTPAREN stmt
   54     | RETURN COLON
   55     | RETURN expr COLON
   56     | assg COLON
   57     | ID LEFTPAREN expr more_expr RIGHTPAREN COLON
   58     | ID LEFTPAREN expr RIGHTPAREN COLON
   59     | ID LEFTPAREN RIGHTPAREN COLON
   60     | LEFTCURL more_stmt RIGHTCURL
   61     | COLON
   62     | error RIGHTCURL
   63     | error RIGHTPAREN
   64     | error COLON

   65 more_stmt: stmt more_stmt
   66          | /* empty */

   67 assg: ID LEFTBRACK expr RIGHTBRACK EQ expr
   68     | ID EQ expr

   69 expr: '-' expr
   70     | '!' expr
   71     | expr DEQ expr
   72     | expr NEQ expr
   73     | expr LTE expr
   74     | expr LT expr
   75     | expr GTE expr
   76     | expr GT expr
   77     | expr AND expr
   78     | expr OR expr
   79     | expr '+' expr
   80     | expr '-' expr
   81     | expr '*' expr
   82     | expr '/' expr
   83     | LEFTPAREN expr RIGHTPAREN
   84     | more_id
   85     | INTCON
   86     | CHARCON
   87     | STRINGCON
   88     | ID

   89 more_expr: expr
   90          | expr ',' more_expr

   91 more_id: ID LEFTPAREN more_expr RIGHTPAREN
   92        | ID LEFTPAREN RIGHTPAREN
   93        | ID LEFTBRACK expr RIGHTBRACK

   94 push: /* empty */

   95 pop: /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33) 70
'*' (42) 81
'+' (43) 79
',' (44) 12 13 19 21 23 27 28 30 32 90
'-' (45) 69 80
'/' (47) 82
error (256) 15 36 62 63 64
INTCON (258) 22 23 85
CHARCON (259) 86
STRINGCON (260) 87
ID (261) 16 57 58 59 67 68 88 91 92 93
CHAR (262) 40
INT (263) 41
COLON (264) 11 12 13 14 15 20 22 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 61 64
EQ (265) 67 68
NEQ (266) 72
OR (267) 78
AND (268) 77
DEQ (269) 71
LT (270) 74
LTE (271) 73
GT (272) 76
GTE (273) 75
LEFTBRACK (274) 22 23 26 27 31 32 67 93
RIGHTBRACK (275) 22 23 26 27 31 32 67 93
LEFTPAREN (276) 11 12 13 14 18 19 33 34 35 43 44 45 46 47 48 49 50
    51 52 53 57 58 59 83 91 92
RIGHTPAREN (277) 11 12 13 14 18 19 33 34 35 43 44 45 46 47 48 49 50
    51 52 53 57 58 59 63 83 91 92
EXTERN (278) 11 12
VOID (279) 42
LEFTCURL (280) 33 34 35 60
RIGHTCURL (281) 33 34 35 36 60 62
IF (282) 43 44
ELSE (283) 43
RETURN (284) 54 55
FOR (285) 46 47 48 49 50 51 52 53
WHILE (286) 45


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
prog (39)
    on left: 1 2 3 4 5, on right: 0
more_prog (40)
    on left: 6 7 8 9, on right: 3 4 8 9
dcl (41)
    on left: 10 11 12 13 14 15, on right: 2 4 7 9
addID (42)
    on left: 16, on right: 11 12 13 14 18 19 20 21 22 23 25 26 27 28
    29 30 31 32 33 34 35
addparams (43)
    on left: 17, on right: 11 12 13 14 18 19 33 34 35
more_dcl (44)
    on left: 18 19, on right: 12 13 19
var_decl (45)
    on left: 20 21 22 23, on right: 10 21 23 33 38
parm_types (46)
    on left: 24 25 26 27 28, on right: 11 12 13 14 18 19 33 34 35
more_parm (47)
    on left: 29 30 31 32, on right: 27 28 30 32
func (48)
    on left: 33 34 35 36, on right: 1 3 6 8
more_interior (49)
    on left: 37 38 39, on right: 33 34 37 38
type (50)
    on left: 40 41 42, on right: 10 11 12 13 14 24 25 26 27 28 29 30
    31 32 33 34 35 38
stmt (51)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64, on right: 34 37 43 44 45 46 47 48 49 50 51 52 53 65
more_stmt (52)
    on left: 65 66, on right: 60 65
assg (53)
    on left: 67 68, on right: 46 47 48 49 50 53 56
expr (54)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    87 88, on right: 43 44 45 46 47 51 53 55 57 58 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82 83 89 90 93
more_expr (55)
    on left: 89 90, on right: 57 90 91
more_id (56)
    on left: 91 92 93, on right: 84
push (57)
    on left: 94, on right: 11 12 13 14 18 19 33 34 35
pop (58)
    on left: 95, on right: 11 12 13 14 18 19 33 34 35


state 0

    0 $accept: . prog $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    EXTERN  shift, and go to state 4
    VOID    shift, and go to state 5

    $end  reduce using rule 5 (prog)

    prog  go to state 6
    dcl   go to state 7
    func  go to state 8
    type  go to state 9


state 1

   15 dcl: error . COLON
   36 func: error . RIGHTCURL

    COLON      shift, and go to state 10
    RIGHTCURL  shift, and go to state 11


state 2

   40 type: CHAR .

    $default  reduce using rule 40 (type)


state 3

   41 type: INT .

    $default  reduce using rule 41 (type)


state 4

   11 dcl: EXTERN . type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams COLON
   12    | EXTERN . type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON

    CHAR  shift, and go to state 2
    INT   shift, and go to state 3
    VOID  shift, and go to state 5

    type  go to state 12


state 5

   42 type: VOID .

    $default  reduce using rule 42 (type)


state 6

    0 $accept: prog . $end

    $end  shift, and go to state 13


state 7

    2 prog: dcl .
    4     | dcl . more_prog

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    EXTERN  shift, and go to state 4
    VOID    shift, and go to state 5

    $end  reduce using rule 2 (prog)

    more_prog  go to state 14
    dcl        go to state 15
    func       go to state 16
    type       go to state 9


state 8

    1 prog: func .
    3     | func . more_prog

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    EXTERN  shift, and go to state 4
    VOID    shift, and go to state 5

    $end  reduce using rule 1 (prog)

    more_prog  go to state 17
    dcl        go to state 15
    func       go to state 16
    type       go to state 9


state 9

   10 dcl: type . var_decl
   13    | type . addID LEFTPAREN push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON
   14    | type . addID LEFTPAREN push parm_types RIGHTPAREN pop addparams COLON
   33 func: type . addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL type var_decl more_interior RIGHTCURL pop addparams
   34     | type . addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL stmt more_interior RIGHTCURL pop addparams
   35     | type . addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL RIGHTCURL pop addparams

    ID  shift, and go to state 18

    addID     go to state 19
    var_decl  go to state 20


state 10

   15 dcl: error COLON .

    $default  reduce using rule 15 (dcl)


state 11

   36 func: error RIGHTCURL .

    $default  reduce using rule 36 (func)


state 12

   11 dcl: EXTERN type . addID LEFTPAREN push parm_types RIGHTPAREN pop addparams COLON
   12    | EXTERN type . addID LEFTPAREN push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON

    ID  shift, and go to state 18

    addID  go to state 21


state 13

    0 $accept: prog $end .

    $default  accept


state 14

    4 prog: dcl more_prog .

    $default  reduce using rule 4 (prog)


state 15

    7 more_prog: dcl .
    9          | dcl . more_prog

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    EXTERN  shift, and go to state 4
    VOID    shift, and go to state 5

    $end  reduce using rule 7 (more_prog)

    more_prog  go to state 22
    dcl        go to state 15
    func       go to state 16
    type       go to state 9


state 16

    6 more_prog: func .
    8          | func . more_prog

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    EXTERN  shift, and go to state 4
    VOID    shift, and go to state 5

    $end  reduce using rule 6 (more_prog)

    more_prog  go to state 23
    dcl        go to state 15
    func       go to state 16
    type       go to state 9


state 17

    3 prog: func more_prog .

    $default  reduce using rule 3 (prog)


state 18

   16 addID: ID .

    $default  reduce using rule 16 (addID)


state 19

   13 dcl: type addID . LEFTPAREN push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON
   14    | type addID . LEFTPAREN push parm_types RIGHTPAREN pop addparams COLON
   20 var_decl: addID . COLON
   21         | addID . ',' var_decl
   22         | addID . LEFTBRACK INTCON RIGHTBRACK COLON
   23         | addID . LEFTBRACK INTCON RIGHTBRACK ',' var_decl
   33 func: type addID . LEFTPAREN push parm_types RIGHTPAREN LEFTCURL type var_decl more_interior RIGHTCURL pop addparams
   34     | type addID . LEFTPAREN push parm_types RIGHTPAREN LEFTCURL stmt more_interior RIGHTCURL pop addparams
   35     | type addID . LEFTPAREN push parm_types RIGHTPAREN LEFTCURL RIGHTCURL pop addparams

    COLON      shift, and go to state 24
    LEFTBRACK  shift, and go to state 25
    LEFTPAREN  shift, and go to state 26
    ','        shift, and go to state 27


state 20

   10 dcl: type var_decl .

    $default  reduce using rule 10 (dcl)


state 21

   11 dcl: EXTERN type addID . LEFTPAREN push parm_types RIGHTPAREN pop addparams COLON
   12    | EXTERN type addID . LEFTPAREN push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON

    LEFTPAREN  shift, and go to state 28


state 22

    9 more_prog: dcl more_prog .

    $default  reduce using rule 9 (more_prog)


state 23

    8 more_prog: func more_prog .

    $default  reduce using rule 8 (more_prog)


state 24

   20 var_decl: addID COLON .

    $default  reduce using rule 20 (var_decl)


state 25

   22 var_decl: addID LEFTBRACK . INTCON RIGHTBRACK COLON
   23         | addID LEFTBRACK . INTCON RIGHTBRACK ',' var_decl

    INTCON  shift, and go to state 29


state 26

   13 dcl: type addID LEFTPAREN . push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON
   14    | type addID LEFTPAREN . push parm_types RIGHTPAREN pop addparams COLON
   33 func: type addID LEFTPAREN . push parm_types RIGHTPAREN LEFTCURL type var_decl more_interior RIGHTCURL pop addparams
   34     | type addID LEFTPAREN . push parm_types RIGHTPAREN LEFTCURL stmt more_interior RIGHTCURL pop addparams
   35     | type addID LEFTPAREN . push parm_types RIGHTPAREN LEFTCURL RIGHTCURL pop addparams

    $default  reduce using rule 94 (push)

    push  go to state 30


state 27

   21 var_decl: addID ',' . var_decl

    ID  shift, and go to state 18

    addID     go to state 31
    var_decl  go to state 32


state 28

   11 dcl: EXTERN type addID LEFTPAREN . push parm_types RIGHTPAREN pop addparams COLON
   12    | EXTERN type addID LEFTPAREN . push parm_types RIGHTPAREN pop addparams ',' more_dcl COLON

    $default  reduce using rule 94 (push)

    push  go to state 33


state 29

   22 var_decl: addID LEFTBRACK INTCON . RIGHTBRACK COLON
   23         | addID LEFTBRACK INTCON . RIGHTBRACK ',' var_decl

    RIGHTBRACK  shift, and go to state 34


state 30

   13 dcl: type addID LEFTPAREN push . parm_types RIGHTPAREN pop addparams ',' more_dcl COLON
   14    | type addID LEFTPAREN push . parm_types RIGHTPAREN pop addparams COLON
   33 func: type addID LEFTPAREN push . parm_types RIGHTPAREN LEFTCURL type var_decl more_interior RIGHTCURL pop addparams
   34     | type addID LEFTPAREN push . parm_types RIGHTPAREN LEFTCURL stmt more_interior RIGHTCURL pop addparams
   35     | type addID LEFTPAREN push . parm_types RIGHTPAREN LEFTCURL RIGHTCURL pop addparams

    CHAR  shift, and go to state 2
    INT   shift, and go to state 3
    VOID  shift, and go to state 5

    parm_types  go to state 35
    type        go to state 36


state 31

   20 var_decl: addID . COLON
   21         | addID . ',' var_decl
   22         | addID . LEFTBRACK INTCON RIGHTBRACK COLON
   23         | addID . LEFTBRACK INTCON RIGHTBRACK ',' var_decl

    COLON      shift, and go to state 24
    LEFTBRACK  shift, and go to state 25
    ','        shift, and go to state 27


state 32

   21 var_decl: addID ',' var_decl .

    $default  reduce using rule 21 (var_decl)


state 33

   11 dcl: EXTERN type addID LEFTPAREN push . parm_types RIGHTPAREN pop addparams COLON
   12    | EXTERN type addID LEFTPAREN push . parm_types RIGHTPAREN pop addparams ',' more_dcl COLON

    CHAR  shift, and go to state 2
    INT   shift, and go to state 3
    VOID  shift, and go to state 5

    parm_types  go to state 37
    type        go to state 36


state 34

   22 var_decl: addID LEFTBRACK INTCON RIGHTBRACK . COLON
   23         | addID LEFTBRACK INTCON RIGHTBRACK . ',' var_decl

    COLON  shift, and go to state 38
    ','    shift, and go to state 39


state 35

   13 dcl: type addID LEFTPAREN push parm_types . RIGHTPAREN pop addparams ',' more_dcl COLON
   14    | type addID LEFTPAREN push parm_types . RIGHTPAREN pop addparams COLON
   33 func: type addID LEFTPAREN push parm_types . RIGHTPAREN LEFTCURL type var_decl more_interior RIGHTCURL pop addparams
   34     | type addID LEFTPAREN push parm_types . RIGHTPAREN LEFTCURL stmt more_interior RIGHTCURL pop addparams
   35     | type addID LEFTPAREN push parm_types . RIGHTPAREN LEFTCURL RIGHTCURL pop addparams

    RIGHTPAREN  shift, and go to state 40


state 36

   24 parm_types: type .
   25           | type . addID
   26           | type . addID LEFTBRACK RIGHTBRACK
   27           | type . addID LEFTBRACK RIGHTBRACK ',' more_parm
   28           | type . addID ',' more_parm

    ID  shift, and go to state 18

    $default  reduce using rule 24 (parm_types)

    addID  go to state 41


state 37

   11 dcl: EXTERN type addID LEFTPAREN push parm_types . RIGHTPAREN pop addparams COLON
   12    | EXTERN type addID LEFTPAREN push parm_types . RIGHTPAREN pop addparams ',' more_dcl COLON

    RIGHTPAREN  shift, and go to state 42


state 38

   22 var_decl: addID LEFTBRACK INTCON RIGHTBRACK COLON .

    $default  reduce using rule 22 (var_decl)


state 39

   23 var_decl: addID LEFTBRACK INTCON RIGHTBRACK ',' . var_decl

    ID  shift, and go to state 18

    addID     go to state 31
    var_decl  go to state 43


state 40

   13 dcl: type addID LEFTPAREN push parm_types RIGHTPAREN . pop addparams ',' more_dcl COLON
   14    | type addID LEFTPAREN push parm_types RIGHTPAREN . pop addparams COLON
   33 func: type addID LEFTPAREN push parm_types RIGHTPAREN . LEFTCURL type var_decl more_interior RIGHTCURL pop addparams
   34     | type addID LEFTPAREN push parm_types RIGHTPAREN . LEFTCURL stmt more_interior RIGHTCURL pop addparams
   35     | type addID LEFTPAREN push parm_types RIGHTPAREN . LEFTCURL RIGHTCURL pop addparams

    LEFTCURL  shift, and go to state 44

    $default  reduce using rule 95 (pop)

    pop  go to state 45


state 41

   25 parm_types: type addID .
   26           | type addID . LEFTBRACK RIGHTBRACK
   27           | type addID . LEFTBRACK RIGHTBRACK ',' more_parm
   28           | type addID . ',' more_parm

    LEFTBRACK  shift, and go to state 46
    ','        shift, and go to state 47

    $default  reduce using rule 25 (parm_types)


state 42

   11 dcl: EXTERN type addID LEFTPAREN push parm_types RIGHTPAREN . pop addparams COLON
   12    | EXTERN type addID LEFTPAREN push parm_types RIGHTPAREN . pop addparams ',' more_dcl COLON

    $default  reduce using rule 95 (pop)

    pop  go to state 48


state 43

   23 var_decl: addID LEFTBRACK INTCON RIGHTBRACK ',' var_decl .

    $default  reduce using rule 23 (var_decl)


state 44

   33 func: type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL . type var_decl more_interior RIGHTCURL pop addparams
   34     | type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL . stmt more_interior RIGHTCURL pop addparams
   35     | type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL . RIGHTCURL pop addparams

    error      shift, and go to state 49
    ID         shift, and go to state 50
    CHAR       shift, and go to state 2
    INT        shift, and go to state 3
    COLON      shift, and go to state 51
    VOID       shift, and go to state 5
    LEFTCURL   shift, and go to state 52
    RIGHTCURL  shift, and go to state 53
    IF         shift, and go to state 54
    RETURN     shift, and go to state 55
    FOR        shift, and go to state 56
    WHILE      shift, and go to state 57

    type  go to state 58
    stmt  go to state 59
    assg  go to state 60


state 45

   13 dcl: type addID LEFTPAREN push parm_types RIGHTPAREN pop . addparams ',' more_dcl COLON
   14    | type addID LEFTPAREN push parm_types RIGHTPAREN pop . addparams COLON

    $default  reduce using rule 17 (addparams)

    addparams  go to state 61


state 46

   26 parm_types: type addID LEFTBRACK . RIGHTBRACK
   27           | type addID LEFTBRACK . RIGHTBRACK ',' more_parm

    RIGHTBRACK  shift, and go to state 62


state 47

   28 parm_types: type addID ',' . more_parm

    CHAR  shift, and go to state 2
    INT   shift, and go to state 3
    VOID  shift, and go to state 5

    more_parm  go to state 63
    type       go to state 64


state 48

   11 dcl: EXTERN type addID LEFTPAREN push parm_types RIGHTPAREN pop . addparams COLON
   12    | EXTERN type addID LEFTPAREN push parm_types RIGHTPAREN pop . addparams ',' more_dcl COLON

    $default  reduce using rule 17 (addparams)

    addparams  go to state 65


state 49

   62 stmt: error . RIGHTCURL
   63     | error . RIGHTPAREN
   64     | error . COLON

    COLON       shift, and go to state 66
    RIGHTPAREN  shift, and go to state 67
    RIGHTCURL   shift, and go to state 68


state 50

   57 stmt: ID . LEFTPAREN expr more_expr RIGHTPAREN COLON
   58     | ID . LEFTPAREN expr RIGHTPAREN COLON
   59     | ID . LEFTPAREN RIGHTPAREN COLON
   67 assg: ID . LEFTBRACK expr RIGHTBRACK EQ expr
   68     | ID . EQ expr

    EQ         shift, and go to state 69
    LEFTBRACK  shift, and go to state 70
    LEFTPAREN  shift, and go to state 71


state 51

   61 stmt: COLON .

    $default  reduce using rule 61 (stmt)


state 52

   60 stmt: LEFTCURL . more_stmt RIGHTCURL

    error     shift, and go to state 49
    ID        shift, and go to state 50
    COLON     shift, and go to state 51
    LEFTCURL  shift, and go to state 52
    IF        shift, and go to state 54
    RETURN    shift, and go to state 55
    FOR       shift, and go to state 56
    WHILE     shift, and go to state 57

    RIGHTCURL  reduce using rule 66 (more_stmt)

    stmt       go to state 72
    more_stmt  go to state 73
    assg       go to state 60


state 53

   35 func: type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL RIGHTCURL . pop addparams

    $default  reduce using rule 95 (pop)

    pop  go to state 74


state 54

   43 stmt: IF . LEFTPAREN expr RIGHTPAREN stmt ELSE stmt
   44     | IF . LEFTPAREN expr RIGHTPAREN stmt

    LEFTPAREN  shift, and go to state 75


state 55

   54 stmt: RETURN . COLON
   55     | RETURN . expr COLON

    INTCON     shift, and go to state 76
    CHARCON    shift, and go to state 77
    STRINGCON  shift, and go to state 78
    ID         shift, and go to state 79
    COLON      shift, and go to state 80
    LEFTPAREN  shift, and go to state 81
    '-'        shift, and go to state 82
    '!'        shift, and go to state 83

    expr     go to state 84
    more_id  go to state 85


state 56

   46 stmt: FOR . LEFTPAREN assg COLON expr COLON assg RIGHTPAREN stmt
   47     | FOR . LEFTPAREN COLON expr COLON assg RIGHTPAREN stmt
   48     | FOR . LEFTPAREN COLON COLON assg RIGHTPAREN stmt
   49     | FOR . LEFTPAREN assg COLON COLON assg RIGHTPAREN stmt
   50     | FOR . LEFTPAREN assg COLON COLON RIGHTPAREN stmt
   51     | FOR . LEFTPAREN COLON expr COLON RIGHTPAREN stmt
   52     | FOR . LEFTPAREN COLON COLON RIGHTPAREN stmt
   53     | FOR . LEFTPAREN assg COLON expr COLON RIGHTPAREN stmt

    LEFTPAREN  shift, and go to state 86


state 57

   45 stmt: WHILE . LEFTPAREN expr RIGHTPAREN stmt

    LEFTPAREN  shift, and go to state 87


state 58

   33 func: type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL type . var_decl more_interior RIGHTCURL pop addparams

    ID  shift, and go to state 18

    addID     go to state 31
    var_decl  go to state 88


state 59

   34 func: type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL stmt . more_interior RIGHTCURL pop addparams

    error     shift, and go to state 49
    ID        shift, and go to state 50
    CHAR      shift, and go to state 2
    INT       shift, and go to state 3
    COLON     shift, and go to state 51
    VOID      shift, and go to state 5
    LEFTCURL  shift, and go to state 52
    IF        shift, and go to state 54
    RETURN    shift, and go to state 55
    FOR       shift, and go to state 56
    WHILE     shift, and go to state 57

    RIGHTCURL  reduce using rule 39 (more_interior)

    more_interior  go to state 89
    type           go to state 90
    stmt           go to state 91
    assg           go to state 60


state 60

   56 stmt: assg . COLON

    COLON  shift, and go to state 92


state 61

   13 dcl: type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams . ',' more_dcl COLON
   14    | type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams . COLON

    COLON  shift, and go to state 93
    ','    shift, and go to state 94


state 62

   26 parm_types: type addID LEFTBRACK RIGHTBRACK .
   27           | type addID LEFTBRACK RIGHTBRACK . ',' more_parm

    ','  shift, and go to state 95

    $default  reduce using rule 26 (parm_types)


state 63

   28 parm_types: type addID ',' more_parm .

    $default  reduce using rule 28 (parm_types)


state 64

   29 more_parm: type . addID
   30          | type . addID ',' more_parm
   31          | type . addID LEFTBRACK RIGHTBRACK
   32          | type . addID LEFTBRACK RIGHTBRACK ',' more_parm

    ID  shift, and go to state 18

    addID  go to state 96


state 65

   11 dcl: EXTERN type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams . COLON
   12    | EXTERN type addID LEFTPAREN push parm_types RIGHTPAREN pop addparams . ',' more_dcl COLON

    COLON  shift, and go to state 97
    ','    shift, and go to state 98


state 66

   64 stmt: error COLON .

    $default  reduce using rule 64 (stmt)


state 67

   63 stmt: error RIGHTPAREN .

    $default  reduce using rule 63 (stmt)


state 68

   62 stmt: error RIGHTCURL .

    $default  reduce using rule 62 (stmt)


state 69

   68 assg: ID EQ . expr

    INTCON     shift, and go to state 76
    CHARCON    shift, and go to state 77
    STRINGCON  shift, and go to state 78
    ID         shift, and go to state 79
    LEFTPAREN  shift, and go to state 81
    '-'        shift, and go to state 82
    '!'        shift, and go to state 83

    expr     go to state 99
    more_id  go to state 85


state 70

   67 assg: ID LEFTBRACK . expr RIGHTBRACK EQ expr

    INTCON     shift, and go to state 76
    CHARCON    shift, and go to state 77
    STRINGCON  shift, and go to state 78
    ID         shift, and go to state 79
    LEFTPAREN  shift, and go to state 81
    '-'        shift, and go to state 82
    '!'        shift, and go to state 83

    expr     go to state 100
    more_id  go to state 85


state 71

   57 stmt: ID LEFTPAREN . expr more_expr RIGHTPAREN COLON
   58     | ID LEFTPAREN . expr RIGHTPAREN COLON
   59     | ID LEFTPAREN . RIGHTPAREN COLON

    INTCON      shift, and go to state 76
    CHARCON     shift, and go to state 77
    STRINGCON   shift, and go to state 78
    ID          shift, and go to state 79
    LEFTPAREN   shift, and go to state 81
    RIGHTPAREN  shift, and go to state 101
    '-'         shift, and go to state 82
    '!'         shift, and go to state 83

    expr     go to state 102
    more_id  go to state 85


state 72

   65 more_stmt: stmt . more_stmt

    error     shift, and go to state 49
    ID        shift, and go to state 50
    COLON     shift, and go to state 51
    LEFTCURL  shift, and go to state 52
    IF        shift, and go to state 54
    RETURN    shift, and go to state 55
    FOR       shift, and go to state 56
    WHILE     shift, and go to state 57

    RIGHTCURL  reduce using rule 66 (more_stmt)

    stmt       go to state 72
    more_stmt  go to state 103
    assg       go to state 60


state 73

   60 stmt: LEFTCURL more_stmt . RIGHTCURL

    RIGHTCURL  shift, and go to state 104


state 74

   35 func: type addID LEFTPAREN push parm_types RIGHTPAREN LEFTCURL RIGHTCURL pop . addparams

    $default  reduce using rule 17 (addparams)

    addparams  go to state 105


state 75

   43 stmt: IF LEFTPAREN . expr RIGHTPAREN stmt ELSE stmt
   44     | IF LEFTPAREN . expr RIGHTPAREN stmt

    INTCON     shift, and go to state 76
    CHARCON    shift, and go to state 77
    STRINGCON  shift, and go to state 78
    ID         shift, and go to state 79
    LEFTPAREN  shift, and go to state 81
    '-'        shift, and go to state 82
    '!'        shift, and go to state 83

    expr     go to state 106
    more_id  go to state 85


state 76

   85 expr: INTCON .

    $default  reduce using rule 85 (expr)


state 77

   86 expr: CHARCON .

    $default  reduce using rule 86 (expr)


state 78

   87 expr: STRINGCON .

    $default  reduce using rule 87 (expr)


state 79

   88 expr: ID .
   91 more_id: ID . LEFTPAREN more_expr RIGHTPAREN
   92        | ID . LEFTPAREN RIGHTPAREN
   93        | ID . LEFTBRACK expr RIGHTBRACK

    LEFTBRACK  shift, and go to state 107
    LEFTPAREN  shift, and go to state 108

    LEFTPAREN  [reduce using rule 88 (expr)]
    $default   reduce using rule 88 (expr)


state 80

   54 stmt: RETURN COLON .

    $default  reduce using rule 54 (stmt)


state 81

   83 expr: LEFTPAREN . expr RIGHTPAREN

    INTCON     shift, and go to state 76
    CHARCON    shift, and go to state 77
    STRINGCON  shift, and go to state 78
    ID         shift, and go to state 79
    LEFTPAREN  shift, and go to state 81
    '-'        shift, and go to state 82
    '!'        shift, and go to state 83

    expr     go to state 109
    more_id  go to state 85


state 82

   69 expr: '-' . expr

    INTCON     shift, and go to state 76
    CHARCON    shift, and go to state 77
    STRINGCON  shift, and go to state 78
    ID         shift, and go to state 79
    LEFTPAREN  shift, and go to state 81
    '-'        shift, and go to state 82
    '!'        shift, and go to state 83

    expr     go to state 110
    more_id  go to state 85


state 83

   70 expr: '!' . expr

    INTCON     shift, and go to state 76
    CHARCON    shift, and go to state 77
    STRINGCON  shift, and go to state 78
    ID         shift, and go to state 79
    LEFTPAREN  shift, and go to state 81
    '-'        shift, and go to state 82
    '!'        shift, and go to state 83

    expr     go to state 111
    more_id  go to state 85


state 84

   55 stmt: RETURN expr . COLON
   71 expr: expr . DEQ expr
   72     | expr . NEQ expr
   73     | expr . LTE expr
   74     | expr . LT expr
   75     | expr . GTE expr
   76     | expr . GT expr
   77     | expr . AND expr
   78     | expr . OR expr
   79     | expr . '+' expr
   80     | expr . '-' expr
   81     | expr . '*' expr
   82     | expr . '/' expr

    COLON  shift, and go to state 112
    NEQ    shift, and go to state 113
    OR     shift, and go to state 114
    AND    shift, and go to state 115
    DEQ    shift, and go to state 116
    LT     shift, and go to state 117
    LTE    shift, and go to state 118
    GT     shift, and go to state 119
    GTE    shift, and go to state 120
    '+'    shift, and go to state 121
    '-'    shift, and go to state 122
    '*'    shift, and go to state 123
    '/'    shift, and go to state 124


state 85

   84 expr: more_id .

    $default  reduce using rule 84 (expr)


state 86

   46 stmt: FOR LEFTPAREN . assg COLON expr COLON assg RIGHTPAREN stmt
   47     | FOR LEFTPAREN . COLON expr COLON assg RIGHTPAREN stmt
   48     | FOR LEFTPAREN . COLON COLON assg RIGHTPAREN stmt
   49     | FOR LEFTPAREN . assg COLON COLON assg RIGHTPAREN stmt
   50     | FOR LEFTPAREN . assg COLON COLON RIGHTPAREN stmt
   51     | FOR LEFTPAREN . COLON expr COLON RIGHTPAREN stmt
   52     | FOR LEFTPAREN . COLON COLON RIGHTPAREN stmt
   53     | FOR LEFTPAREN . assg COLON expr COLON RIGHTPAREN stmt

    ID     shift, and go to state 125
    COLON  shift, and go to state 126

    assg  go to state 127


state 87

   45 stmt: WHILE LEFTPAREN . expr RIGHTPAREN stmt
